# genai-mediaplan

./: .gitignore  API_README.md  README.md  USER_AUTHENTICATION_README.md  final_report.md  get_response_for_all_cohorts.py  mediaplan_responses.json  minimal_api.py  minimal_api_fixed.py  pyproject.toml  start_user_auth_system.sh
frontend/: index.html  server.py
src/genai_mediaplan/: api.py  api_server.py  crew.py  main.py
src/genai_mediaplan/config/: agents.yaml  tasks.yaml
src/genai_mediaplan/schedulers/: scheduler.py
src/genai_mediaplan/utils/: auth_manager.py  forecast_data.py  forecast_data_api_based.py  helper.py  logger.py  persona.py  update_charts.py  update_forecast_data_in_slides.py  update_google_slides_content.py  user_slides_manager.py
