[project]
name = "genai_mediaplan"
version = "0.1.0"
description = "genai-mediaplan using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "google-api-python-client>=2.176.0",
    "google-auth-oauthlib>=1.2.2",
    "mysql-connector-python>=9.3.0",
]

[project.scripts]
genai_mediaplan = "genai_mediaplan.main:run"
run_crew = "genai_mediaplan.main:run"
train = "genai_mediaplan.main:train"
replay = "genai_mediaplan.main:replay"
test = "genai_mediaplan.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
